support sync issue status
