# controller/v1/synchronization.go
@@ -17,8 +17,9 @@ type SyncController struct {
 func (sc *SyncController) Register(root *gin.RouterGroup) {
 	syncRouter := root.Group("/synchronization")
 	{
-		syncRouter.POST("/:platform/comment", sc.Comment)
-		syncRouter.POST("/:platform/issue", sc.Issue)
+		syncRouter.POST("/:platform/comment", sc.SyncComment)
+		syncRouter.POST("/:platform/issue", sc.SyncIssue)
+		syncRouter.PUT("/:platform/issue", sc.SyncIssueUpdate)
 	}
 }
 
@@ -30,9 +31,9 @@ func (sc *SyncController) Register(root *gin.RouterGroup) {
 // @Param	data		body	models.Comment	true	"需要同步的comment"
 // @Success 200 {object}	models.BaseResp "同步成功"
 // @Failure	404	{object}	models.BaseResp	"错误返回"
-// @Failure	500	{object}	models.BaseResp	"错误返回"
+// @Failure	400	{object}	models.BaseResp	"错误返回"
 // @Router /synchronization/{platform}/comment [post]
-func (sc *SyncController) Comment(c *gin.Context) {
+func (sc *SyncController) SyncComment(c *gin.Context) {
 	err := func() error {
 		b := models.Comment{}
 		if err := c.ShouldBind(&b); err != nil {
@@ -62,9 +63,9 @@ func (sc *SyncController) Comment(c *gin.Context) {
 // @Param	data		body	models.Issue	true	"需要同步的issue"
 // @Success 200 {object}	models.BaseResp{data=models.SyncIssueResult} "同步成功"
 // @Failure	404	{object}	models.BaseResp	"错误返回"
-// @Failure	500	{object}	models.BaseResp	"错误返回"
+// @Failure	400	{object}	models.BaseResp	"错误返回"
 // @Router /synchronization/{platform}/issue [post]
-func (sc *SyncController) Issue(c *gin.Context) {
+func (sc *SyncController) SyncIssue(c *gin.Context) {
 	r, err := func() (*models.SyncIssueResult, error) {
 		b := models.Issue{}
 		if err := c.ShouldBind(&b); err != nil {
@@ -85,4 +86,36 @@ func (sc *SyncController) Issue(c *gin.Context) {
 	}()
 
 	sc.doResponse(c, r, err)
+}
+
+// @Tags Synchronization
+// @Summary 同步更新 gitee 或 github 平台的 issue
+// @Produce json
+// @Accept json
+// @Param	platform	path	string			true	"平台：gitee 或 github"
+// @Param	data		body	models.IssueUpdate	true	"需要跟新的issue信息"
+// @Success 200 {object}	models.BaseResp "同步成功"
+// @Failure	404	{object}	models.BaseResp	"错误返回"
+// @Failure	400	{object}	models.BaseResp	"错误返回"
+// @Router /synchronization/{platform}/issue [put]
+func (sc *SyncController) SyncIssueUpdate(c *gin.Context) {
+	err := func() error {
+		p := models.IssueUpdate{}
+		if err := c.ShouldBind(&p); err != nil {
+			return errors.Wrap(paramError, err.Error())
+		}
+
+		client, err := platformClient(c.Param("platform"))
+		if err != nil {
+			return errors.Wrap(paramError, err.Error())
+		}
+
+		if err := client.SyncIssueState(p); err != nil {
+			return errors.Wrapf(utils.NewCodeError(utils.CodeSyncIssueFail), "sync issue status fail: %v", err)
+		}
+
+		return nil
+	}()
+
+	sc.doResponse(c, nil, err)
 }
